# rfnoc-Kwan

./: 1000packet.pcapng  1000packet_test.csv  CMakeLists.txt  FM_recevier.grc  Info  MANIFEST.md  Makefile  README.md  create_input  create_input.cpp  csvedit.py  dailylog  hex  latencytest.py  simple_FM_recevier.grc  test-cross.grc  test.grc  version
cmake/Modules/: KwanConfig.cmake  kwan_crossConfig.cmake
docs/: README.Kwan  README.kwan_cross
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: Kwan_latencytest.xml  Kwan_latencytest2.xml  kwan_cross_Latencytest.xml
include/Kwan/: CMakeLists.txt  api.h  latencytest.h  latencytest2.h  latencytest2_block_ctrl.hpp  latencytest_block_ctrl.hpp
include/kwan_cross/: CMakeLists.txt  Latencytest.h  Latencytest_block_ctrl.hpp  api.h
lib/: CMakeLists.txt  Latencytest_block_ctrl_impl.cpp  Latencytest_impl.cc  Latencytest_impl.h  latencytest2_block_ctrl_impl.cpp  latencytest2_impl.cc  latencytest2_impl.h  latencytest_block_ctrl_impl.cpp  latencytest_impl.cc  latencytest_impl.h  qa_Kwan.cc  qa_Kwan.h  qa_Latencytest.cc  qa_Latencytest.h  qa_kwan_cross.cc  qa_kwan_cross.h  qa_latencytest.cc  qa_latencytest.h  qa_latencytest2.cc  qa_latencytest2.h  test_Kwan.cc  test_kwan_cross.cc
modified-lib-file/radio/: noc_block_radio_core.v
modified-lib-file/rfnoc/: chdr_framer_2clk.v  noc_block_ddc.v
python/: CMakeLists.txt  __init__.py  qa_Latencytest.py  qa_latencytest.py  qa_latencytest2.py
rawdata/: 128 rawdata.csv  16 rawdata.csv  256 rawdata.csv  32 rawdata.csv  4 rawdata.csv  44 rawdata.csv  48 rawdata.csv  64 rawdata.csv  8 rawdata.csv  plot.R  readME.md
rfnoc/blocks/: Latencytest.xml  latencytest.xml  latencytest2.xml
rfnoc/fpga-src/: Makefile.srcs  noc_block_Latencytest.v  noc_block_latencytest.v  noc_block_latencytest2.v  noc_block_radio_core_modified.v  radio_datapath_core_modified.v  rx_control_gen3_modified.v
rfnoc/testbenches/: CMakeLists.txt
rfnoc/testbenches/noc_block_Latencytest_tb/: Makefile  noc_block_Latencytest_tb.sv
rfnoc/testbenches/noc_block_latencytest_tb/: Makefile  noc_block_latencytest_tb.sv  webtalk.jou  webtalk_4546.backup.jou  webtalk_7084.backup.jou  webtalk_7921.backup.jou  webtalk_8826.backup.jou
rfnoc/testbenches/noc_block_latencytest_tb/xsim_proj/: xsim_proj.xpr
swig/: CMakeLists.txt  Kwan_swig.i  kwan_cross_swig.i
xilinx-fpga-project/2wire/: 2wire.xpr
xilinx-fpga-project/2wire/2wire.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
xilinx-fpga-project/2wire/2wire.hw/backup/: hw_ila_data_1.ila  hw_ila_data_2.ila
xilinx-fpga-project/2wire/2wire.hw/hw_1/: hw.xml
xilinx-fpga-project/2wire/2wire.runs/.jobs/: vrs_config_19.xml  vrs_config_3.xml  vrs_config_5.xml  vrs_config_8.xml
xilinx-fpga-project/2wire/2wire.runs/synth_1/: .vivado.begin.rst  dont_touch.xdc  fsm_encoding.os  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb  (+4 more)
(+112 files in other folders)
